# MCPLens

./: .gitignore  README.md  config.example.yaml  config.py  main.py  pyproject.toml
analyser/: analyser.py
dashboard/: index.html
proxy/: hub.py  interceptor.py  proxy.py  replay.py  sse.py
storage/: db.py  sessions.py
tests/: mock_mcp.py  test_analyser.py  test_cli.py  test_config.py  test_db.py  test_interceptor.py  test_proxy_json.py  test_proxy_pipeline.py  test_proxy_sse.py  test_replay.py
