[project]
name = "mcp-traffic-inspector"
version = "0.1.0"
description = "Debugging reverse-proxy that captures, visualises, and replays MCP tool-call traffic"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx2",
    "aiosqlite",
    "jsonschema",
    "typer",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
mcp-inspector = "main:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "config"]
packages = ["proxy", "storage", "analyser"]
